deploy/kubernetes/manifests/mariadb-replica-watcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-replica-watcher
  labels:
    app: wrestlingdev
    component: mariadb-watcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wrestlingdev
      component: mariadb-watcher
  template:
    metadata:
      labels:
        app: wrestlingdev
        component: mariadb-watcher
    spec:
      containers:
      - name: replica-watcher
        image: mariadb:10.3
        command:
        - bash
        - -c
        - |
          [...]
      restartPolicy: Always
