deploy/kubernetes/manifests/wrestlingdev.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrestlingdev-app
  labels:
    app: wrestlingdev
spec:
  ports:
    - port: 80
  selector:
    app: wrestlingdev
    tier: frontend
  clusterIP: None
---
apiVersion: apps/v1
# Use a statefulset instead of a deployment because we need to have a unique identity for each pod
# for solid queue to work properly and solid queue is running with puma threads
kind: StatefulSet
metadata:
  name: wrestlingdev-app
  labels:
    app: wrestlingdev
spec:
  replicas: 2
  serviceName: wrestlingdev-app
  selector:
    matchLabels:
      app: wrestlingdev
      tier: frontend
  template:
    metadata:
      labels:
        app: wrestlingdev
        tier: frontend
    spec:
      containers:
      - name: wrestlingdev-app
        image: jcwimer/wrestlingdev:prod
        imagePullPolicy: Always
        command: ["bundle"]
        args: ["exec", "rails", "server", "-e", "production", "-p", "80", "-b", "0.0.0.0"]
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 180
          periodSeconds: 20
          timeoutSeconds: 10
